# MarlinFlasher

./: README.md  setup.py
octoprint_marlinflasher/: __init__.py
octoprint_marlinflasher/lib/: CMakeLists.txt
octoprint_marlinflasher/static/css/: marlinflasher.css
octoprint_marlinflasher/static/js/: marlinflasher.js
octoprint_marlinflasher/templates/: marlinflasher_settings.jinja2
